Fix FullQuant Demo

--- a/example/full_quantization/image_classification/configs/mobilenetv3_large_qat_dis.yaml
+++ b/example/full_quantization/image_classification/configs/mobilenetv3_large_qat_dis.yaml
@@ -4,7 +4,7 @@ Global:
   model_filename: inference.pdmodel
   params_filename: inference.pdiparams
   batch_size: 128
-  data_dir: ./ILSVRC2012_data_demo/ILSVRC2012/
+  data_dir: ./ILSVRC2012/
 
 Distillation:
   alpha: 1.0
