--- a/example/post_training_quantization/pytorch_yolo_series/configs/yolov6s_fine_tune.yaml
+++ b/example/post_training_quantization/pytorch_yolo_series/configs/yolov6s_fine_tune.yaml
@@ -1,6 +1,8 @@
 arch: YOLOv6
 model_dir: ./yolov6s.onnx
 dataset_dir: /dataset/coco/
+model_filename: model.pdmodel
+params_filename: model.pdiparams
 train_image_dir: train2017
 val_image_dir: val2017
 train_anno_path: annotations/instances_train2017.json
