--- a/example/auto_compression/image_classification/configs/eval.yaml
+++ b/example/auto_compression/image_classification/configs/eval.yaml
@@ -1,7 +1,8 @@
-model_dir: './MobileNetV1_infer'
-model_filename: 'inference.pdmodel'
-params_filename: "inference.pdiparams"
-batch_size: 128
-data_dir: './ILSVRC2012_data_demo/ILSVRC2012/'
-img_size: 224
-resize_size: 256
+Global:
+  model_dir: './MobileNetV1_infer'
+  model_filename: 'inference.pdmodel'
+  params_filename: "inference.pdiparams"
+  batch_size: 128
+  data_dir: './ILSVRC2012_data_demo/ILSVRC2012/'
+  img_size: 224
+  resize_size: 256
