--- a/example/auto_compression/semantic_segmentation/configs/hrnet/hrnet_qat.yaml
+++ b/example/auto_compression/semantic_segmentation/configs/hrnet/hrnet_qat.yaml
@@ -1,4 +1,5 @@
 Global:
+  input_name: x
   reader_config: configs/dataset/cityscapes_1024x512_scale1.0.yml
   model_dir: ./RES-paddle2-HRNetW18-Seg
   model_filename: model
