--- a/example/auto_compression/semantic_segmentation/configs/pp_humanseg/pp_humanseg_auto.yaml
+++ b/example/auto_compression/semantic_segmentation/configs/pp_humanseg/pp_humanseg_auto.yaml
@@ -1,4 +1,5 @@
 Global:
+  input_name: x
   reader_config: configs/dataset/humanseg_dataset.yaml
   model_dir: ./ppseg_lite_portrait_398x224_with_softmax
   model_filename: model.pdmodel
