--- a/example/auto_compression/semantic_segmentation/configs/BiSeNetV2/BiSeNetV2_qat.yaml
+++ b/example/auto_compression/semantic_segmentation/configs/BiSeNetV2/BiSeNetV2_qat.yaml
@@ -1,16 +1,16 @@
 Global:
   input_name: x
   reader_config: configs/dataset/cityscapes_1024x512_scale1.0.yml
-  model_dir: ./RES-paddle2-Deeplabv3-ResNet50
-  model_filename: model
-  params_filename: params
+  model_dir: ./BiSeNetV2
+  model_filename: model.pdmodel
+  params_filename: model.pdiparams
   batch_size: 4
 
 Distillation:
   alpha: 1.0
   loss: l2
   node:
-  - conv2d_123.tmp_1
+  - conv2d_103.tmp_1
 
 Quantization:
   onnx_format: True
@@ -19,9 +19,13 @@ Quantization:
   - depthwise_conv2d
 
 TrainConfig:
-  epochs: 1
+  epochs: 5
   eval_iter: 360
-  learning_rate: 0.0001
+  logging_iter: 100
+  learning_rate: 
+    type: PiecewiseDecay
+    boundaries: [2]
+    values: [0.00001, 0.000001]
   optimizer_builder:
     optimizer: 
       type: SGD
