--- a/example/auto_compression/semantic_segmentation/configs/unet/unet_qat.yaml
+++ b/example/auto_compression/semantic_segmentation/configs/unet/unet_qat.yaml
@@ -19,6 +19,7 @@ TrainConfig:
   epochs: 20
   eval_iter: 360
   learning_rate: 0.0001
-  optimizer: SGD
-  optim_args:
-    weight_decay: 4.0e-05
+  optimizer_builder:
+    optimizer: 
+      type: SGD
+    weight_decay: 4.0e-05  
