Adjust example of PTQ&HPO.

--- a/example/auto_compression/nlp/configs/pp-minilm/auto/cmnli.yaml
+++ b/example/auto_compression/nlp/configs/pp-minilm/auto/cmnli.yaml
@@ -10,7 +10,7 @@ TransformerPrune:
   pruned_ratio: 0.25
 HyperParameterOptimization:
 Distillation:
-Quantization:
+QuantPost:
 TrainConfig:
   epochs: 6
   eval_iter: 2000
