--- a/example/auto_compression/nlp/configs/pp-minilm/auto/cluewsc.yaml
+++ b/example/auto_compression/nlp/configs/pp-minilm/auto/cluewsc.yaml
@@ -10,7 +10,7 @@ TransformerPrune:
   pruned_ratio: 0.25
 HyperParameterOptimization:
 Distillation:
-Quantization:
+QuantPost:
 TrainConfig:
   epochs: 100
   eval_iter: 70
