--- a/example/auto_compression/nlp/configs/pp-minilm/auto/iflytek.yaml
+++ b/example/auto_compression/nlp/configs/pp-minilm/auto/iflytek.yaml
@@ -10,7 +10,7 @@ TransformerPrune:
   pruned_ratio: 0.25
 HyperParameterOptimization:
 Distillation:
-Quantization:
+QuantPost:
 TrainConfig:
   epochs: 12
   eval_iter: 750
