--- a/example/full_quantization/ppyoloe/configs/ppyoloe_s_qat_dis.yaml
+++ b/example/full_quantization/ppyoloe/configs/ppyoloe_s_qat_dis.yaml
@@ -7,25 +7,26 @@ Global:
   model_filename: model.pdmodel
   params_filename: model.pdiparams
 
-PTQ:
+PTQ:   # Post Training Quantization
   quantizable_op_type: ["conv2d", "depthwise_conv2d"]
   activation_quantize_type: 'moving_average_abs_max'
+  algo: avg
   is_full_quantize: True
   onnx_format: False
   batch_size: 10
   batch_nums: 10
 
-Distillation:
-  alpha: 1.0
-  loss: soft_label
-
-Quantization:
+Quantization:   # Auto Compression
   onnx_format: true
   use_pact: true
   activation_quantize_type: 'moving_average_abs_max'
   quantize_op_types:
   - conv2d
   - depthwise_conv2d
+
+Distillation:
+  alpha: 1.0
+  loss: soft_label
 
 TrainConfig:
   train_iter: 5000
