--- a/example/auto_compression/detection/configs/picodet_s_qat_dis.yaml
+++ b/example/auto_compression/detection/configs/picodet_s_qat_dis.yaml
@@ -18,7 +18,7 @@ Distillation:
   - conv2d_154.tmp_1
   - tmp_8
 
-Quantization:
+QuantAware:
   use_pact: true
   activation_quantize_type: 'moving_average_abs_max'
   weight_bits: 8
