--- a/example/auto_compression/detection/configs/tinypose_qat_dis.yaml
+++ b/example/auto_compression/detection/configs/tinypose_qat_dis.yaml
@@ -12,7 +12,7 @@ Distillation:
   node:
   -  conv2d_441.tmp_0
 
-Quantization:
+QuantAware:
   use_pact: true
   activation_quantize_type: 'moving_average_abs_max'
   weight_quantize_type: 'channel_wise_abs_max'  # 'abs_max' is layer wise quant
