--- a/example/auto_compression/detection/configs/yolov3_mbv1_qat_dis.yaml
+++ b/example/auto_compression/detection/configs/yolov3_mbv1_qat_dis.yaml
@@ -13,7 +13,7 @@ Distillation:
   - conv2d_85.tmp_0
   - conv2d_86.tmp_0
 
-Quantization:
+QuantAware:
   activation_quantize_type: 'range_abs_max'
   quantize_op_types:
   - conv2d
