--- a/example/auto_compression/ocr/configs/ppocrv3_det_qat_dist.yaml
+++ b/example/auto_compression/ocr/configs/ppocrv3_det_qat_dist.yaml
@@ -9,7 +9,7 @@ Distillation:
   alpha: 1.0
   loss: l2
 
-Quantization:
+QuantAware:
   use_pact: true
   activation_bits: 8
   is_full_quantize: false
