--- a/example/full_quantization/ppyoloe/configs/ppyoloe_s_qat_dis.yaml
+++ b/example/full_quantization/ppyoloe/configs/ppyoloe_s_qat_dis.yaml
@@ -16,7 +16,7 @@ PTQ:   # Post Training Quantization
   batch_size: 10
   batch_nums: 10
 
-Quantization:   # Auto Compression
+QuantAware:   # Auto Compression
   onnx_format: true
   use_pact: true
   activation_quantize_type: 'moving_average_abs_max'
