--- a/example/auto_compression/image_classification/configs/ResNet50_vd/qat_dis.yaml
+++ b/example/auto_compression/image_classification/configs/ResNet50_vd/qat_dis.yaml
@@ -11,7 +11,7 @@ Distillation:
   node:
   - softmax_0.tmp_0
 
-Quantization:
+QuantAware:
   use_pact: true
   activation_bits: 8
   is_full_quantize: false
