--- a/example/auto_compression/image_classification/configs/SqueezeNet1_0/qat_dis.yaml
+++ b/example/auto_compression/image_classification/configs/SqueezeNet1_0/qat_dis.yaml
@@ -10,7 +10,7 @@ Distillation:
   loss: l2
   node:
   - softmax_0.tmp_0
-Quantization:
+QuantAware:
   activation_bits: 8
   is_full_quantize: false
   activation_quantize_type: moving_average_abs_max
