--- a/example/auto_compression/semantic_segmentation/configs/pp_humanseg/pp_humanseg_qat.yaml
+++ b/example/auto_compression/semantic_segmentation/configs/pp_humanseg/pp_humanseg_qat.yaml
@@ -10,7 +10,7 @@ Distillation:
   node:
   - batch_norm_47.tmp_2
 
-Quantization:
+QuantAware:
   onnx_format: True
   quantize_op_types:
   - conv2d
