--- a/example/full_quantization/image_classification/configs/mobilenetv3_large_qat_dis.yaml
+++ b/example/full_quantization/image_classification/configs/mobilenetv3_large_qat_dis.yaml
@@ -9,7 +9,7 @@ Global:
 Distillation:
   alpha: 1.0
   loss: soft_label
-Quantization:
+QuantAware:
   use_pact: true
   activation_bits: 8
   activation_quantize_type: moving_average_abs_max
