--- a/example/full_quantization/picodet/configs/picodet_npu_with_postprocess.yaml
+++ b/example/full_quantization/picodet/configs/picodet_npu_with_postprocess.yaml
@@ -15,7 +15,7 @@ PTQ:   # Post Training Quantization
   batch_size: 32
   batch_nums: 10
 
-Quantization:   # Auto Compression
+QuantAware:   # Auto Compression
   use_pact: true
   activation_quantize_type: 'moving_average_abs_max'
   weight_bits: 8
