--- a/example/full_quantization/ppyoloe/configs/ppyoloe_s_416_qat_dis.yaml
+++ b/example/full_quantization/ppyoloe/configs/ppyoloe_s_416_qat_dis.yaml
@@ -20,7 +20,7 @@ Distillation:
   alpha: 1.0
   loss: soft_label
 
-Quantization:   # Auto Compression
+QuantAware:   # Auto Compression
   onnx_format: true
   use_pact: true
   activation_quantize_type: 'moving_average_abs_max'
