--- a/example/full_quantization/picodet/configs/picodet_npu_with_postprocess.yaml
+++ b/example/full_quantization/picodet/configs/picodet_npu_with_postprocess.yaml
@@ -11,7 +11,7 @@ Distillation:
   alpha: 1.0
   loss: l2
 
-Quantization:
+QuantAware:   # Auto Compression
   use_pact: true
   activation_quantize_type: 'moving_average_abs_max'
   weight_bits: 8
