--- a/example/quantization_analysis/GPT/configs/gpt_345M_analysis.yaml
+++ b/example/quantization_analysis/GPT/configs/gpt_345M_analysis.yaml
@@ -1,7 +1,6 @@
 Global:
   device: gpu
   seed: 1024
-  gpt_config: ./configs/gpt_config.yaml
   quant_model_dir: ./GPT_345_QAT_wo_analysis
   float_model_dir: ./GPT_345M_Baseline
   model_filename: model.pdmodel
@@ -9,7 +8,7 @@ Global:
   quantizable_op_type: ["mul", "matmul", "matmul_v2"]
   resume: False
   reader_config: ./configs/gpt_reader.yaml
-  cloze_eval: True
+  cloze_eval: True # True for LAMBADA Dataset; False for WikiText
   
   
 
