--- a/example/auto_compression/image_classification/configs/VIT/qat_dis.yaml
+++ b/example/auto_compression/image_classification/configs/VIT/qat_dis.yaml
@@ -7,25 +7,11 @@ Global:
   reader_config: ./configs/VIT/data_reader.yml
 
 Distillation:
-  alpha: 1.0
-  loss: l2
   node:
   - softmax_12.tmp_0
   
-Quantization:
+QuantAware:
   use_pact: true
-  activation_bits: 8
-  is_full_quantize: false
-  activation_quantize_type: moving_average_abs_max
-  weight_quantize_type: channel_wise_abs_max
-  not_quant_pattern:
-  - skip_quant
-  quantize_op_types:
-  - conv2d
-  - depthwise_conv2d
-  - matmul
-  - matmul_v2
-  weight_bits: 8
   onnx_format: true
   
 TrainConfig:
