--- a/example/auto_compression/detection/configs/ppyoloe_l_qat_dis.yaml
+++ b/example/auto_compression/detection/configs/ppyoloe_l_qat_dis.yaml
@@ -1,7 +1,8 @@
 
 Global:
   reader_config: configs/yolo_reader.yml
-  arch: YOLO
+  arch: PPYOLOE
+  include_nms: True
   Evaluation: True
   model_dir: ./ppyoloe_crn_l_300e_coco
   model_filename: model.pdmodel
