--- a/example/auto_compression/detection/configs/ppyoloe_plus_s_qat_dis.yaml
+++ b/example/auto_compression/detection/configs/ppyoloe_plus_s_qat_dis.yaml
@@ -1,10 +1,10 @@
 
 Global:
-  reader_config: configs/yolo_reader.yml
+  reader_config: configs/ppyoloe_plus_reader.yml
   arch: PPYOLOE
   include_nms: False
   Evaluation: True
-  model_dir: ./ppyoloe_crn_s_300e_coco
+  model_dir: ./ppyoloe_plus_crn_s_80e_coco_no_nms  # https://bj.bcebos.com/v1/paddle-slim-models/act/ppyoloe_plus_crn_s_80e_coco_no_nms.tar
   model_filename: model.pdmodel
   params_filename: model.pdiparams
 
