--- a/example/auto_compression/nlp/configs/uie/uie_base.yaml
+++ b/example/auto_compression/nlp/configs/uie/uie_base.yaml
@@ -4,6 +4,8 @@ Global:
   params_filename: inference.pdiparams
   batch_size: 1
   max_seq_length: 512
+  train_data: ./data/train.txt
+  dev_data: ./data/dev.txt
 TrainConfig:
   epochs: 200
   eval_iter: 100
@@ -13,19 +15,8 @@ TrainConfig:
       type: AdamW
     weight_decay: 0.01
 
-Quantization:
-  use_pact: false
-  activation_bits: 8
-  is_full_quantize: false
+QuantAware:
   onnx_format: True
-  activation_quantize_type: moving_average_abs_max
-  weight_quantize_type: channel_wise_abs_max
-  not_quant_pattern:
-  - skip_quant
-  quantize_op_types:
-  - matmul
-  - matmul_v2
-  weight_bits: 8
 Distillation:
   alpha: 1.0
   loss: l2
